added autogen flask server
