# swagger_server/models/__init__.py
@@ -7,7 +7,9 @@ from swagger_server.models.arena import Arena
 from swagger_server.models.bounds import Bounds
 from swagger_server.models.competitor import Competitor
 from swagger_server.models.effect_grid import EffectGrid
+from swagger_server.models.effect_grid_map import EffectGridMap
 from swagger_server.models.move_request import MoveRequest
 from swagger_server.models.position import Position
 from swagger_server.models.robot import Robot
 from swagger_server.models.terrain_grid import TerrainGrid
+from swagger_server.models.terrain_grid_map import TerrainGridMap
